# copia_flet_ana_app

./: 1  README.md  app-release.apk.sha1  main.py  pyproject.toml  requirements.txt  restaurante_appbar.db
