[project]
name = "restauranteappbar"
version = "1.0.0"
description = "Aplicaci칩n de prueba con pesta침as"
dependencies = ["flet>=0.28.0"]
requires-python = ">=3.9"

[build-system]
requires = ["flet"]
build-backend = "flet"

[tool.flet]
app_path = "main.py"
app_name = "restauranteappbar"
app_description = "Aplicaci칩n de prueba con pesta침as"

[tool.flet.android]
package = "com.test.restauranteappbar"
permissions = ["android.permission.INTERNET"]
adaptive_icon_background = "#7B1FA2"

